--- a/nginx.conf
+++ b/nginx.conf
@@ -1,23 +1,45 @@
-server {
-    listen 80;
-    server_name localhost;
-    root /usr/share/nginx/html;
-    index index.html;
+# 1. LOAD THE MODULE (Must be at the top)
+load_module modules/ngx_http_otel_module.so;
 
-    # Handle client-side routing
-    location / {
-        try_files $uri $uri/ /index.html;
+events {
+    worker_connections 1024;
+}
+
+http {
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
+
+    # 2. CONFIGURE THE EXPORTER (Where to send traces)
+    otel_exporter {
+        endpoint "tabletap-monitor.taila459ef.ts.net:4317";
     }
 
-    # Cache static assets for 1 year
-    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
-        expires 1y;
-        add_header Cache-Control "public, immutable";
-    }
+    # 3. GLOBAL TRACING SETTINGS
+    otel_trace on;
+    otel_trace_context propagate;
+    otel_service_name "table-app"; # You can change this per app if you want
 
-    # Security headers
-    add_header X-Frame-Options "SAMEORIGIN" always;
-    add_header X-Content-Type-Options "nosniff" always;
-    add_header X-XSS-Protection "1; mode=block" always;
-    add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+    server {
+        listen 80;
+        server_name localhost;
+        root /usr/share/nginx/html;
+        index index.html;
+
+        # Handle client-side routing
+        location / {
+            try_files $uri $uri/ /index.html;
+        }
+
+        # Cache static assets for 1 year
+        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+            expires 1y;
+            add_header Cache-Control "public, immutable";
+        }
+
+        # Security headers
+        add_header X-Frame-Options "SAMEORIGIN" always;
+        add_header X-Content-Type-Options "nosniff" always;
+        add_header X-XSS-Protection "1; mode=block" always;
+        add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+    }
 }
