--- a/nginx.conf
+++ b/nginx.conf
@@ -1,5 +1,6 @@
 # 1. LOAD THE MODULE (Must be at the top)
-load_module modules/ngx_http_otel_module.so;
+load_module modules/ngx_otel_module.so;
+
 
 events {
     worker_connections 1024;
