--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,7 @@
 # 1. LOAD THE MODULE (Must be at the top)
+# Note: In nginxinc/nginx-otel image, the module is usually already loaded
+# or located at a different path. Try removing this line first.
 load_module modules/ngx_otel_module.so;
-
 
 events {
     worker_connections 1024;
@@ -13,12 +14,18 @@ http {
     # 2. CONFIGURE THE EXPORTER (Where to send traces)
     otel_exporter {
         endpoint "tabletap-monitor.taila459ef.ts.net:4317";
+        # If using HTTP/protobuf instead of gRPC, uncomment:
+        # endpoint "http://tabletap-monitor.taila459ef.ts.net:4318/v1/traces";
     }
 
     # 3. GLOBAL TRACING SETTINGS
     otel_trace on;
     otel_trace_context propagate;
-    otel_service_name "table-app"; # You can change this per app if you want
+    otel_service_name "table-app";
+    
+    # Optional: Add span attributes for better tracing
+    otel_span_attr "deployment.environment" "production";
+    otel_span_attr "service.version" "1.0.0";
 
     server {
         listen 80;
@@ -29,12 +36,18 @@ http {
         # Handle client-side routing
         location / {
             try_files $uri $uri/ /index.html;
+            
+            # Optional: Add custom span name for this location
+            otel_span_name "serve_spa";
         }
 
         # Cache static assets for 1 year
         location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
             expires 1y;
             add_header Cache-Control "public, immutable";
+            
+            # Optional: Don't trace static assets (reduces noise)
+            otel_trace off;
         }
 
         # Security headers
