--- a/nginx.conf
+++ b/nginx.conf
@@ -1,7 +1,5 @@
-# 1. LOAD THE MODULE (Must be at the top)
-# Note: In nginxinc/nginx-otel image, the module is usually already loaded
-# or located at a different path. Try removing this line first.
-load_module modules/ngx_otel_module.so;
+# Module is already loaded in otel/opentelemetry-nginx image
+# Remove or comment out the load_module line
 
 events {
     worker_connections 1024;
@@ -11,21 +9,15 @@ http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
 
-    # 2. CONFIGURE THE EXPORTER (Where to send traces)
+    # Configure the OTLP exporter
     otel_exporter {
-        endpoint "tabletap-monitor.taila459ef.ts.net:4317";
-        # If using HTTP/protobuf instead of gRPC, uncomment:
-        # endpoint "http://tabletap-monitor.taila459ef.ts.net:4318/v1/traces";
+        endpoint tabletap-monitor.taila459ef.ts.net:4317;
     }
 
-    # 3. GLOBAL TRACING SETTINGS
+    # Enable tracing
     otel_trace on;
     otel_trace_context propagate;
     otel_service_name "table-app";
-    
-    # Optional: Add span attributes for better tracing
-    otel_span_attr "deployment.environment" "production";
-    otel_span_attr "service.version" "1.0.0";
 
     server {
         listen 80;
@@ -33,24 +25,15 @@ http {
         root /usr/share/nginx/html;
         index index.html;
 
-        # Handle client-side routing
         location / {
             try_files $uri $uri/ /index.html;
-            
-            # Optional: Add custom span name for this location
-            otel_span_name "serve_spa";
         }
 
-        # Cache static assets for 1 year
         location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
             expires 1y;
             add_header Cache-Control "public, immutable";
-            
-            # Optional: Don't trace static assets (reduces noise)
-            otel_trace off;
         }
 
-        # Security headers
         add_header X-Frame-Options "SAMEORIGIN" always;
         add_header X-Content-Type-Options "nosniff" always;
         add_header X-XSS-Protection "1; mode=block" always;
