--- a/nginx.conf
+++ b/nginx.conf
@@ -1,5 +1,5 @@
-# Module is already loaded in otel/opentelemetry-nginx image
-# Remove or comment out the load_module line
+# Load the OTEL module (installed to /etc/nginx/modules by the package)
+load_module modules/ngx_otel_module.so;
 
 events {
     worker_connections 1024;
@@ -14,7 +14,7 @@ http {
         endpoint tabletap-monitor.taila459ef.ts.net:4317;
     }
 
-    # Enable tracing
+    # Enable tracing globally
     otel_trace on;
     otel_trace_context propagate;
     otel_service_name "table-app";
@@ -25,15 +25,20 @@ http {
         root /usr/share/nginx/html;
         index index.html;
 
+        # Handle client-side routing
         location / {
             try_files $uri $uri/ /index.html;
         }
 
+        # Cache static assets for 1 year
         location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
             expires 1y;
             add_header Cache-Control "public, immutable";
+            # Optional: disable tracing for static assets to reduce noise
+            otel_trace off;
         }
 
+        # Security headers
         add_header X-Frame-Options "SAMEORIGIN" always;
         add_header X-Content-Type-Options "nosniff" always;
         add_header X-XSS-Protection "1; mode=block" always;
