--- a/nginx.conf
+++ b/nginx.conf
@@ -1,4 +1,4 @@
-# Load the OTEL module (installed to /etc/nginx/modules by the package)
+# Load the OTEL module
 load_module modules/ngx_otel_module.so;
 
 events {
