--- a/k8s/networking/ingress.yaml
+++ b/k8s/networking/ingress.yaml
@@ -1,13 +1,12 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: table-ingress
+  name: tabletap-ingress
   annotations:
-    # This tells Traefik (K3s default) to handle this
     kubernetes.io/ingress.class: "traefik"
 spec:
   rules:
-  # Rule 1: Catch traffic for table-1.test.local
+  # Replace these with your REAL domains when you are ready
   - host: table-1.test.local
     http:
       paths:
@@ -15,11 +14,9 @@ spec:
         pathType: Prefix
         backend:
           service:
-            name: table-service # This must match your Service name
+            name: tabletap-service # MUST match the service name above
             port:
               number: 80
-  
-  # Rule 2: Catch traffic for table-2.test.local
   - host: table-2.test.local
     http:
       paths:
@@ -27,6 +24,6 @@ spec:
         pathType: Prefix
         backend:
           service:
-            name: table-service
+            name: tabletap-service
             port:
               number: 80
