speeddd up build

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,47 +1,27 @@
-# Load the OTEL module
-load_module modules/ngx_otel_module.so;
+user  nginx;
+worker_processes  auto;
+
+error_log  /var/log/nginx/error.log notice;
+pid        /var/run/nginx.pid;
 
 events {
-    worker_connections 1024;
+    worker_connections  1024;
 }
 
 http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
 
-    # Configure the OTLP exporter
-    otel_exporter {
-        endpoint tabletap-monitor.taila459ef.ts.net:4317;
-    }
+    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                      '$status $body_bytes_sent "$http_referer" '
+                      '"$http_user_agent" "$http_x_forwarded_for"';
 
-    # Enable tracing globally
-    otel_trace on;
-    otel_trace_context propagate;
-    otel_service_name "table-app";
+    access_log  /var/log/nginx/access.log  main;
 
-    server {
-        listen 80;
-        server_name localhost;
-        root /usr/share/nginx/html;
-        index index.html;
+    sendfile        on;
+    keepalive_timeout  65;
 
-        # Handle client-side routing
-        location / {
-            try_files $uri $uri/ /index.html;
-        }
-
-        # Cache static assets for 1 year
-        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
-            expires 1y;
-            add_header Cache-Control "public, immutable";
-            # Optional: disable tracing for static assets to reduce noise
-            otel_trace off;
-        }
-
-        # Security headers
-        add_header X-Frame-Options "SAMEORIGIN" always;
-        add_header X-Content-Type-Options "nosniff" always;
-        add_header X-XSS-Protection "1; mode=block" always;
-        add_header Referrer-Policy "strict-origin-when-cross-origin" always;
-    }
+    # ✅ THIS IS THE KEY LINE
+    # It tells Nginx: "Go find the server configuration in the other file"
+    include /etc/nginx/conf.d/*.conf;
 }
