--- a/.github/workflows/build-depoly-to-k3s.yml
+++ b/.github/workflows/build-depoly-to-k3s.yml
@@ -8,11 +8,18 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  # We will set IMAGE_NAME dynamically in the steps to ensure it is lowercase
 
 jobs:
   build-and-push:
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        include:
+          - platform: linux/amd64
+            runner: ubuntu-latest
+          - platform: linux/arm64
+            runner: ubuntu-24.04-arm
+    
+    runs-on: ${{ matrix.runner }}
     permissions:
       contents: read
       packages: write
@@ -25,11 +32,6 @@ jobs:
         run: |
           echo "IMAGE_NAME=${GITHUB_REPOSITORY,,}" >> $GITHUB_ENV
 
-      # --- FIX 1: Enable QEMU for ARM builds ---
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-
-      # --- FIX 2: Enable Docker Buildx ---
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
@@ -40,14 +42,20 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Extract platform tag
+        id: platform
+        run: |
+          echo "tag=$(echo ${{ matrix.platform }} | sed 's/linux\///')" >> $GITHUB_OUTPUT
+
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
           context: .
           push: true
-          # --- FIX 3: Build for ARM64 (Oracle Cloud) AND AMD64 (Standard) ---
-          platforms: linux/amd64,linux/arm64
-          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+          platforms: ${{ matrix.platform }}
+          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.platform.outputs.tag }}
+          cache-from: type=gha,scope=${{ matrix.platform }}
+          cache-to: type=gha,mode=max,scope=${{ matrix.platform }}
           build-args: |
             VITE_API_URL_MENU=${{ secrets.VITE_API_URL_MENU }}
             VITE_API_KEY=${{ secrets.VITE_API_KEY }}
@@ -59,8 +67,33 @@ jobs:
             VITE_LEX_BOT_LOCALE_ID=${{ secrets.VITE_LEX_BOT_LOCALE_ID }}
             VITE_STRIPE_PUBLISHABLE_KEY=${{ secrets.VITE_STRIPE_PUBLISHABLE_KEY }}
 
-  deploy-to-server:
+  create-manifest:
     needs: build-and-push
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+    
+    steps:
+      - name: Lowercase Repository Name
+        run: |
+          echo "IMAGE_NAME=${GITHUB_REPOSITORY,,}" >> $GITHUB_ENV
+
+      - name: Log in to the Container registry
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      
+      - name: Create multi-arch manifest
+        run: |
+          docker buildx imagetools create -t ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest \
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:amd64 \
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:arm64
+
+  deploy-to-server:
+    needs: create-manifest
     runs-on: ubuntu-latest
     
     steps:
@@ -76,7 +109,6 @@ jobs:
         source: "k8s/"
         target: "/home/${{ secrets.SERVER_USER }}/TableTap"
 
-    # Uncommented this so it runs automatically for you
     - name: Apply K8s Manifests
       uses: appleboy/ssh-action@v1.0.3
       with:
