--- a/.github/workflows/build-depoly-to-k3s.yml
+++ b/.github/workflows/build-depoly-to-k3s.yml
@@ -78,6 +78,7 @@ jobs:
         username: ${{ secrets.SERVER_USER }}
         key: ${{ secrets.SSH_PRIVATE_KEY }}
         script: |
+          export KUBECONFIG=~/.kube/config
           cd ~/TableTap
           kubectl apply -f k8s/tables/
           kubectl rollout restart deployment/tabletap-app
