--- a/k8s/networking/ingress.yaml
+++ b/k8s/networking/ingress.yaml
@@ -1,16 +1,44 @@
+apiVersion: traefik.io/v1alpha1
+kind: Middleware
+metadata:
+  # Define a middleware for path stripping
+  name: table-path-stripper
+spec:
+  # This middleware strips the leading /table-X path prefix before forwarding to the service.
+  # This ensures the application (Nginx) always thinks it's running at the root /.
+  stripPrefix:
+    prefixes:
+      - /table-1
+      - /table-2
+      - /table-3
+      - /table-4
+      - /table-5
+      - /table-6
+      - /table-7
+      - /table-8
+      - /table-9
+      - /table-10
+      - /table-11
+---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: momotaro-ingress
   annotations:
-    # Use the Traefik Ingress Class deployed by K3s
+    # 1. Use the Traefik Ingress Class deployed by K3s
     kubernetes.io/ingress.class: "traefik"
-    # Optional: Force HTTP -> HTTPS redirect if you set up TLS later
-    # traefik.ingress.kubernetes.io/router.entrypoints: websecure
+    
+    # 2. Assign the Path Stripping Middleware to the Dine-In routes.
+    # Note: Middlewares must be prefixed with their namespace (default-...) if applied globally.
+    traefik.ingress.kubernetes.io/router.middlewares: default-table-path-stripper@kubernetescrd
+    
+    # 3. Enable Let's Encrypt TLS (uses the resolver defined in traefik-config.yaml)
+    traefik.ingress.kubernetes.io/router.tls: "true"
+    traefik.ingress.kubernetes.io/router.tls.certresolver: le-staging
+    
 spec:
   rules:
-    # 1. TAKEOUT HOST: take-out.momotarosushi.ca
-    # The App.tsx sees 'take-out' in the hostname and switches to takeout mode.
+    # RULE A: TAKEOUT HOST (No Path Stripping Needed, just forward root /)
   - host: take-out.momotarosushi.ca
     http:
       paths:
@@ -22,13 +50,11 @@ spec:
             port:
               number: 80
 
-    # 2. DINE-IN HOST: dine-in.momotarosushi.ca
-    # This single host handles 11 separate paths (/table-1/ through /table-11/).
+    # RULE B: DINE-IN HOST (Path Stripping Required for Assets)
   - host: dine-in.momotarosushi.ca
     http:
       paths:
-        # Rules for /table-1/ up to /table-11/
-        # pathType: Prefix ensures it catches /table-X, /table-X/, and /table-X/menu
+        # 1. Table-1 Path (Applies middleware to strip /table-1)
       - path: /table-1
         pathType: Prefix
         backend:
@@ -36,6 +62,8 @@ spec:
             name: tabletap-service
             port:
               number: 80
+        
+        # 2. Table-2 Path
       - path: /table-2
         pathType: Prefix
         backend:
@@ -43,6 +71,8 @@ spec:
             name: tabletap-service
             port:
               number: 80
+
+        # 3. Table-3 Path
       - path: /table-3
         pathType: Prefix
         backend:
@@ -50,6 +80,8 @@ spec:
             name: tabletap-service
             port:
               number: 80
+        
+        # 4. Table-4 Path
       - path: /table-4
         pathType: Prefix
         backend:
@@ -57,6 +89,8 @@ spec:
             name: tabletap-service
             port:
               number: 80
+
+        # 5. Table-5 Path
       - path: /table-5
         pathType: Prefix
         backend:
@@ -64,6 +98,8 @@ spec:
             name: tabletap-service
             port:
               number: 80
+
+        # 6. Table-6 Path
       - path: /table-6
         pathType: Prefix
         backend:
@@ -71,6 +107,8 @@ spec:
             name: tabletap-service
             port:
               number: 80
+
+        # 7. Table-7 Path
       - path: /table-7
         pathType: Prefix
         backend:
@@ -78,6 +116,8 @@ spec:
             name: tabletap-service
             port:
               number: 80
+
+        # 8. Table-8 Path
       - path: /table-8
         pathType: Prefix
         backend:
@@ -85,6 +125,8 @@ spec:
             name: tabletap-service
             port:
               number: 80
+
+        # 9. Table-9 Path
       - path: /table-9
         pathType: Prefix
         backend:
@@ -92,6 +134,8 @@ spec:
             name: tabletap-service
             port:
               number: 80
+
+        # 10. Table-10 Path
       - path: /table-10
         pathType: Prefix
         backend:
@@ -99,6 +143,8 @@ spec:
             name: tabletap-service
             port:
               number: 80
+              
+        # 11. Table-11 Path
       - path: /table-11
         pathType: Prefix
         backend:
@@ -106,3 +152,18 @@ spec:
             name: tabletap-service
             port:
               number: 80
+      
+      # 12. CATCH-ALL Redirect for dine-in.momotarosushi.ca/ (If user forgets /table-X)
+      - path: /
+        pathType: Exact
+        backend:
+          service:
+            name: tabletap-service
+            port:
+              number: 80
+  
+  tls:
+    - secretName: momotaro-tls-staging
+      hosts:
+        - take-out.momotarosushi.ca
+        - dine-in.momotarosushi.ca
