--- a/k8s/networking/traefik-config.yaml
+++ b/k8s/networking/traefik-config.yaml
@@ -6,6 +6,22 @@ metadata:
   namespace: kube-system
 spec:
   valuesContent: |-
+    # --- ADDED PORTS CONFIGURATION ---
+    ports:
+      # This block ensures Traefik's websecure entrypoint
+      # is exposed on the host's port 443.
+      websecure:
+        port: 8443        # The port Traefik listens on internally in the container
+        expose: true
+        exposedPort: 443 # The port exposed on the host machine (THIS IS THE KEY)
+        protocol: TCP
+      web:
+        port: 8000        # Internal HTTP port
+        expose: true
+        exposedPort: 80   # Host's port 80
+        protocol: TCP
+    # --- END ADDED CONFIGURATION ---
+    
     # Enable Let's Encrypt on the websecure entrypoint
     tolerations:
       - key: CriticalAddonsOnly
@@ -18,7 +34,7 @@ spec:
       # --- FIX: Add the TLS Challenge ---
       - "--certificatesresolvers.le-staging.acme.tlschallenge=true"
       # -----------------------------------
-      - "--entrypoints.websecure.address=:443"
+      - "--entrypoints.websecure.address=:443" # This is now the entrypoint *inside* Traefik container
       # Global redirection of HTTP (web) to HTTPS (websecure)
       - "--entrypoints.web.http.redirections.entrypoint.to=websecure"
       - "--entrypoints.web.http.redirections.entrypoint.scheme=https"
