--- a/k8s/01-deploy/deployment.yaml
+++ b/k8s/01-deploy/deployment.yaml
@@ -29,18 +29,4 @@ spec:
         - name: VITE_APP_MODE
           value: "dine-in" 
         - name: VITE_API_URL_MENU
-          value: "https://your-api-url.com" # Placeholder: Replace with your actual menu API URL
----
-apiVersion: v1
-kind: Service
-metadata:
-  # This name is crucial for the Ingress to target
-  name: tabletap-service
-spec:
-  # Type: ClusterIP is mandatory when using an Ingress controller like Traefik
-  type: ClusterIP
-  selector:
-    app: tabletap
-  ports:
-  - port: 80
-    targetPort: 80 # This is the containerPort (Nginx default)
+          value: "https://your-api-url.com" # Placeholder: Replace with your actual menu API URI
